# A3

./: CHANGE_ICON.md  INIT.md  INIT_STEP1.md  INSTALL_PNPM.md  MILESTONE_首页导航设置界面完成.md  PROGRESS_编写完成.md  PROGRESS_首页导航设置界面完成.md  PROJECT_COMPLETED.md  PROJECT_PLAN.md  PROJECT_SUMMARY.md  README.md  START.md  UPGRADE_TO_TAURI_V2.md  index.html  package-lock.json  package.json  start-dev.sh
.cargo/: config.toml
.github/workflows/: release.yml
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: ICON_GUIDE.md  ICON_ROUNDED_CORNERS.md  LOGO_DESIGN_GUIDE.md  README.md  README.txt  add-padding-simple.sh  add-padding.sh  generate-icons.sh  icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
src/components/: AnswerDetail.tsx  AnswerList.tsx  Config.tsx  Login.tsx  Navigation.tsx  SplashScreen.tsx
src/components/settings/: AISettings.tsx  AccountSettings.tsx  FeishuSettings.tsx  TableSettings.tsx  UserManagementDialog.tsx
src/components/ui/: button.tsx  card.tsx  dialog.tsx  input.tsx  tabs.tsx
src/contexts/: AuthContext.tsx
src/lib/: api.ts  feishuClient.ts  userManager.ts  utils.ts
src/pages/: AnswerDetailPage.tsx  AnswersPage.tsx  HelpPage.tsx  HomePage.tsx  SettingsPage.tsx  UserRolePage.tsx
src/types/: answer.ts
